Prevent mini screen from going out of bound horizontally

--- a/floatVideo.css
+++ b/floatVideo.css
@@ -2,11 +2,19 @@
   width: 310px;
   height: 175px;
   line-height: 100px;
-  text-align: center;
-  background: red;
-  color: white;
   position: fixed;
-  left: 20px;
-  top: 20px;
+  left: 5px;
+  top: 55px;
   z-index: 1000;
 }
+
+.draggable {
+  position: relative;
+}
+
+.videoContainer {
+    position: relative; 
+    top: 0; left:0;
+    width: 100%; height: 100%; 
+    z-index: -1;
+} 
